--- a/WEB/home.html
+++ b/WEB/home.html
@@ -1,2 +1,13 @@
-<h1>Welcome home</h1>
-<iframe src="https://www.youtube.com/watch?v=fXBlxnK0Ntw"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>embedding</title>
+</head>
+<body>
+    <h1>Welcome home</h1>
+    <iframe src="https://www.youtube.com/embed/j0GVq-ghtWw"></iframe>
+</body>
+</html>
