--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./CSS/style.css"> <!--linking css externally-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple site</title>
     <style>
-        body{
-            background-color: purple;
-            color: white;
-        }
-        nav{
-            background-color: black;
-        }
-        div{
-            background-color:palevioletred ;
-        }
-        p{
-            background-color: brown;
-        }
+        
     </style>
 </head>
 <body>
@@ -28,20 +17,34 @@
     <h3>Well my name is Emmy</h3>
     <h4>I love Doja</h4>
     <h5>And sleep,lmao:))</h5> -->
-        <nav>
+        <nav id="nav-1">
+        <h1>Hello!</h1>
             <a href="https://github.com/stacykimindiri"><li>Portfolio</li></a>
             <a href="./home.html"><li>Home</li></a>
             <a href="./Emmy.html"><li>About Me</li></a>
             <a href="./posts.html"><li>Posts</li></a>
-        </nav>
+        </nav id="nav-2">
     <div>
+    <div>
+        <label>Enter your first name</label>
+        <form action="">
+            <input type="text" placeholder="Enter your first name">
+            <br>
+            <input type="text" placeholder="Enter your message">
+            <input type="radio" name="Choco" id="">
+            <input type="checkbox" name="Choco" id="">
+        </form>
+        <button onclick="Submit_button()">Submit</button>
+    </div>
         <h1>My First Post</h1>
         <small>Posted By: Stacy Emmy</small>
+        <br> <!--to set a new line-->
         <small>Date: 4th July</small>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto ab nihil, dignissimos amet sit ullam, modi similique animi dolores facere cupiditate? Excepturi similique sunt earum esse rem quibusdam ipsa?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum accusamus dolor, aperiam eius dolorem provident velit! Rerum tempore eum dolore molestiae nostrum provident praesentium sunt, dolores mollitia optio ut fuga.</p>
-        <h1>History of lorem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aspernatur perspiciatis eum temporibus doloribus ducimus iure beatae vero molestiae ex natus, ipsum, eligendi rem quos, magnam asperiores quaerat nam aliquid?</p>
+        <p style="color:blue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto ab nihil, dignissimos amet sit ullam, modi similique animi dolores facere cupiditate? Excepturi similique sunt earum esse rem quibusdam ipsa?</p>
+        <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum accusamus dolor, aperiam eius dolorem provident velit! Rerum tempore eum dolore molestiae nostrum provident praesentium sunt, dolores mollitia optio ut fuga.</p>
+        <h1 class="'block">History of lorem</h1>
+        <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aspernatur perspiciatis eum temporibus doloribus ducimus iure beatae vero molestiae ex natus, ipsum, eligendi rem quos, magnam asperiores quaerat nam aliquid?</p>
     </div>
+<script src="./JS/index.js"></script>
 </body>
 </html>
